@@ -119,3 +119,4 @@ v 1.9:
 	- '/manuaddsub' now correctly reports if it was able to add the sub group.
 	- Allow negation to the * permission node when populating superperms.
 	- Fix trying to modify an unmodifiable collection breaking superperms.
+	- Fixed subgroups (I broke earlier).
